﻿RELEASE 2.1.5 WIP
+ Added selective vertex and edge support for calculations. Use SkipProcessing property on vertex or edge data object to include/exclude in calculations and visualization.
	Works only in WPF version.
+ Fixed major memory leak in WPF version when regenerating visual edges
+ Changed CopyToBidirectionalGraph() extension method
+ Fixed rectangular selection logic
+ Some code refactoring

RELEASE 2.1.4 WIP
+ Fixed dynamic Showcase example when only one vertex was added
+ Misc project fixes including build type and information

RELEASE 2.1.3 WIP

+ Added experimental METRO support

+ Redesigned libraries for PCL implementation
	This shouldn't lead to major problems but some breaks will definetly occur:
	- All routines in Logic library now operates with custom System.Windows types (platform-specific libraries operates (externaly) with System.Windows types). This includes any custom algorithms. 
	- GraphX.Controls assembly was renamed to GraphX.WPF.Controls assembly
	- DataSaveModel class renamed to GraphSerializationData 
	- Althought file operations such as Save/load layout remains the same for the end user the background logic of this features has been changed:
		- Implemented IFileServiceProvider interface and corresponding property in GXLogicCore class
		- When you assign GraphArea::LogicCore property the new default (platform-specific) FileServiceProvider is created and assigned to LogicCore automaticaly (if corresponding property is null)
		- You can create custom FileServiceProviders to work with 3rd party serialization libraries or code your own file operations logic

+ Added example project for VB.NET
+ Added method to GraphArea to show/hide vertex labels
+ Added MouseUp event global handling for VertexControl
+ Improvement: GXLogicCore expected concrete class as TGraph (thanks to stefanpe)
+ Removed redundant dependencies (reworked some dependencies)
+ Implemented many small tweaks and optimizations during the port process